Ajustes generales de app a nivel de issues puntuales en funcionalidades.

--- a/LogisticAppProject/app/src/main/res/layout/activity_password_change.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_password_change.xml
@@ -57,7 +57,7 @@
             android:layout_marginTop="20dp"
             android:layout_below="@+id/btn_save_password_changes"
             android:gravity="center_horizontal|center_vertical"
-            android:text="La contraseña debe tener:\n\nAl menos 4 caracteres\nAl menos 1 mayuscula\nAl menos 1 minuscula\nAl menos 1 minuscula\nAl menos 1 caracter especial" />
+            android:text="La contraseña debe tener:\n\nAl menos 4 caracteres\nAl menos 1 mayuscula\nAl menos 1 minuscula\nAl menos 1 caracter especial" />
 
     </RelativeLayout>
 
