--- a/LogisticAppProject/app/src/main/res/values/colors.xml
+++ b/LogisticAppProject/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#14216C</color>
     <color name="colorPrimaryDark">#2B43CD</color>
-    <color name="colorAccent">#E91E63</color>
+    <color name="colorAccent">#026CBA</color>
     <color name="colorBlockOption">#A1999C</color>
 </resources>
